Remove calls to Map#of and Set#of.